Fix colours on dark mode inputs

--- a/web/src/form.css
+++ b/web/src/form.css
@@ -54,6 +54,10 @@
   gap: 6px;
   border-bottom: 1px solid var(--dropspot-grey);
   padding-bottom: 1rem;
+
+  @media (prefers-color-scheme: dark) {
+    border-color: transparent;
+  }
 }
 
 /** Form field label */
